--- a/style.scss
+++ b/style.scss
@@ -413,12 +413,19 @@ header #click:checked ~ ul li a {
       }
       .multi-editorial-banners {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         align-items: center;
-        justify-content: space-evenly;
-        grid-gap: 1em;
+        justify-content: center;
+        flex-wrap: wrap;
+        .item {
+          margin-bottom: 2%;
+          max-height: 400px;
+          max-width: 280px;
+          height: 100%;
+          width: auto;
+        }
         img {
-          border: 1px solid gainsboro;
+          border: none;
           border-radius: 5px;
         }
       }
@@ -439,17 +446,27 @@ header #click:checked ~ ul li a {
       .editorial-desc_alt {
         display: flex;
         flex-direction: column;
-        margin-right: 2em;
         word-wrap: normal;
         margin-bottom: 2em;
         span.tertiary-link {
           color: $core-dark;
           font-weight: 600;
-          max-width: calc(6 * 16px);
+          max-width: calc(6 * 18px);
           width: 100%;
+          text-decoration: underline;
           &:hover {
-            text-decoration: underline;
+            text-decoration: none;
           }
+        }
+        span.signature {
+          justify-content: flex-end;
+          text-align: right;
+          font-style: italic;
+          font-family: "Raleway", sans-serif;
+          font-size: 16px;
+          font-weight: 500;
+          line-height: 30px;
+          letter-spacing: 1.7px;
         }
       }
     }
@@ -458,22 +475,24 @@ header #click:checked ~ ul li a {
 
 // contact form styles
 .contact-page-section {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 0;
   margin-bottom: 30px;
-  width: 90vw;
   .contact-container {
-    border: $button-border-settings;
-    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     .contact-form {
       display: flex;
+      flex-direction: column;
+      padding: 0.5em;
+      border: $button-border-settings;
+      border-radius: 5px;
       .contact-form-container {
         border-radius: 0;
         .left {
           background: #b5d9545c;
           padding-top: 0.5em;
+          border-radius: 5px;
         }
         .input-area {
           padding: 0.5em;
@@ -530,10 +549,8 @@ header #click:checked ~ ul li a {
   cursor: pointer;
   width: 80vw;
   padding: 5px;
-  border-bottom: 1px solid #000100;
-  border-top: none;
-  border-left: none;
-  border-right: none;
+  border: 1px solid #000100;
+  border-radius: 3px;
   font-size: 16px;
   color: #3d3d3d;
 }
@@ -548,6 +565,8 @@ header #click:checked ~ ul li a {
       font-family: "Poppins";
       font-size: 18px;
       color: #3d3d3d;
+      border: 1px solid #000100;
+      border-radius: 3px;
       cursor: pointer;
     }
   }
@@ -647,24 +666,28 @@ footer {
         .logo {
           display: flex;
           flex-direction: row;
+          align-items: center;
+          padding-top: 30px;
           .logo-placeholder {
             display: flex;
             align-items: center;
             justify-content: center;
             width: 90px;
             height: auto;
-            margin-right: 9px;
+            margin-right: 20px;
             flex-direction: column;
             .company-logo img {
               border: none;
             }
           }
-          .logo-name {
+          .logo-title {
             font-size: 22px;
             color: $core-dark;
-            line-height: 23px;
             font-variant-caps: all-petite-caps;
-            letter-spacing: 3pt;
+            line-height: 2;
+          }
+          .logo-subtitle {
+            display: none;
           }
         }
       }
@@ -673,13 +696,14 @@ footer {
         flex-direction: column;
         justify-content: space-evenly;
         align-items: flex-start;
-        padding-bottom: 15px;
-        .mailto-link {
+        padding-bottom: 20px;
+        a {
           color: $core-dark;
-          text-decoration: underline;
-          text-decoration-color: $core-light;
-          transition: $button-hover-state;
           margin-top: 20px;
+        }
+        .mailto-link {
+          text-decoration: underline;
+          transition: $button-hover-state;
           &:hover {
             text-decoration: none;
             font-weight: 500;
@@ -701,15 +725,14 @@ footer {
   a {
     display: flex;
     padding: 1rem;
+    img {
+      border: none;
+    }
   }
 }
 
 // Medium mobile Phone Viewport styles
 @media only screen and (min-width: 375px) {
-  .tools {
-    flex-direction: row;
-  }
-
   .show-modal {
     left: 5%;
   }
@@ -735,147 +758,94 @@ footer {
     max-width: 415px;
   }
 
-  footer .footer-container .footer-details .footer-top-bar .logo .logo-name {
-    letter-spacing: 5pt;
-    margin-top: 0.5em;
-  }
-}
-
-// tablets to small laptops
-@media only screen and (min-width: 610px) {
-  .nav-container {
-    padding-left: 1em;
-    header .logo {
-      .logo-placeholder {
-        margin-left: 0.5em;
-      }
-      .logo-container .logo-name {
-        font-size: 2em;
-      }
+  footer .footer-container .footer-details .footer-top-bar .logo {
+    .logo-title {
+      letter-spacing: 5pt;
+      margin-top: 0.5em;
+    }
+    .logo-subtitle {
+      display: flex;
+      font-size: 17px;
+      color: $core-dark;
+      font-variant-caps: all-petite-caps;
+      letter-spacing: 0.63pt;
     }
   }
+}
+// tablets to small laptops
+@media only screen and (min-width: 610px) {
   .menu-btn svg {
     right: 22px;
   }
 
-  .research-qoute {
-    margin: 0 1em;
+  .make-a-donation-section,
+  .research-qoute,
+  .editorial-card {
+    padding: 1.6em;
   }
 
-  .featured .left {
-    margin: 0 1em;
-  }
-  .featured .right {
-    width: 65%;
-    height: auto;
-    padding-bottom: 1em;
-  }
-
-  /*contact page styles*/
-  .contact-page-section {
-    background-image: url(/img/thank-you-bkg.svg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    .contact-container .contact-form {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      width: 60vw;
-      padding: 0 20px;
-      .contact-form-container {
-        .left {
-          align-items: center;
-          justify-content: center;
-          width: 60vw;
-
-          .input-area {
-            margin: 10px 0;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            label .text-field,
-            .submit-button {
-              width: 54vw;
-            }
-          }
-        }
-      }
-    }
-  }
+  /*contact form styles*/
 
   .contact-page-section .contact-container .contact-form .contact-form-container .input-area label .first-child,
   .contact-page-section .contact-container .contact-form .contact-form-container .input-area label .second-child,
-  .contact-page-section .contact-container .contact-form .contact-form-container .input-area label .third-child {
+  .contact-page-section .contact-container .contact-form .contact-form-container .input-area label .third-child,
+  .contact-page-section .contact-container .contact-form .contact-form-container .left .input-area label .text-field,
+  .contact-page-section .contact-container .contact-form .contact-form-container .left .input-area .submit-button {
     width: 54vw;
   }
 
-  .show-modal {
-    width: 50vw;
-    height: 30vh;
-    top: 35%;
-    left: 20%;
-  }
+  //   // thank you page styles
+  //   .thank-you-section {
+  //     display: flex;
+  //     align-items: center;
+  //     justify-content: center;
+  //     background: url(img/thank-you-bkg.jpg);
+  //     background-size: contain;
+  //     background-repeat: no-repeat;
+  //     background-position: center;
+  //     .thank-you-container {
+  //       padding: 0;
+  //       .thank-you-message {
+  //         max-width: 415px;
+  //         margin: 2em;
+  //       }
+  //     }
+  //   }
 
-  // thank you page styles
-  .thank-you-section {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: url(img/thank-you-bkg.jpg);
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-    .thank-you-container {
-      padding: 0;
-      .thank-you-message {
-        max-width: 415px;
-        margin: 2em;
-      }
-    }
-  }
-
-  footer .footer-container .footer-details {
-    padding: 2em;
-  }
+  //   footer .footer-container .footer-details {
+  //     padding: 2em;
+  //   }
 }
 
 // Styles for tablets and small laptops
 @media only screen and (min-width: 895px) {
-  .nav-container {
-    header {
-      nav ul li {
-        font-size: 2rem;
-        font-variant-caps: all-petite-caps;
-      }
-      .logo {
-        .logo-placeholder {
-          margin-left: 1.3em;
-        }
-        .logo-container {
-          .logo-name {
-            font-size: 1.8rem;
-            letter-spacing: 5pt;
-          }
-          .logo-title {
-            display: flex;
-            align-items: flex-end;
-            color: $core-light;
-            font-size: 0.8rem;
-            letter-spacing: 4.5pt;
-            margin-left: 20px;
-          }
-        }
-      }
+  .hero-container {
+    height: 70vh;
+  }
+
+  .make-a-donation-section .primary-button {
+    width: 330px;
+    margin: 0 auto;
+    margin-top: 1em;
+    margin-bottom: 1em;
+  }
+
+  .editorial-card .card-grid_start {
+    img {
+      display: flex;
+      align-self: center;
+      width: 60%;
     }
-    .hero-container {
-      display: grid;
-      padding: 0;
-      .is-centered {
-        .hero-text-content {
-          padding: 2em;
-        }
+    .inner {
+      display: flex;
+      flex-direction: column;
+      .editorial-desc_alt {
+        margin-right: 4em;
+      }
+      img {
+        display: flex;
+        align-self: center;
+        width: 60%;
       }
     }
   }
@@ -883,47 +853,49 @@ footer {
     right: 2em;
   }
 
-  .hero-container .hero-text-content .hero-button-container {
+  // padding for page sections
+  .research-qoute,
+  .editorial-card,
+  .editorial-card > .card-grid-start {
+    padding: 2.5em;
+  }
+
+  .editorial-card .card-grid_start .inner .multi-editorial-banners {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
     flex-direction: row;
-    justify-content: flex-start;
-    .primary-button {
-      width: 20%;
-      margin-right: 1em;
-    }
-    .secondary-button {
-      width: 20%;
-      margin-top: 0;
+    .item {
+      width: 32%;
+      margin-bottom: 2%;
+      max-height: 400px;
+      height: 100%;
+      width: auto;
     }
   }
 
   // contact page styles
 
-  .contact-page-section {
-    padding: 2.5em;
-    .contact-container .contact-form {
-      width: 40vw;
-      padding: 1em;
-      .contact-form-title {
-        margin-top: 0;
-        font-weight: 500;
-      }
-      .contact-form-container {
-        .left {
-          width: 40vw;
-        }
-      }
-    }
-  }
-
   .contact-page-section .contact-container .contact-form .contact-form-container .left .input-area label .first-child,
   .contact-page-section .contact-container .contact-form .contact-form-container .left .input-area label .second-child,
   .contact-page-section .contact-container .contact-form .contact-form-container .left .input-area label .third-child,
   .contact-page-section .contact-container .contact-form .contact-form-container .left .input-area label .text-field {
-    padding: 5px 10px;
+    padding: 9px 8px;
     width: 36vw;
     height: auto;
   }
 
+  .contact-page-section .contact-container .contact-form .contact-form-container .left .w100 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    .submit-button {
+      width: 20vw;
+      margin-top: 2em;
+      margin-bottom: 1em;
+    }
+  }
   .show-modal {
     top: 34%;
     left: 29.5%;
@@ -961,215 +933,20 @@ footer {
 
 //Styles for Laptops
 @media only screen and (min-width: 1050px) {
-  .nav-container {
-    height: 60px;
-    width: 100%;
-    header {
-      .logo {
-        .logo-container {
-          flex-direction: column;
-          margin-left: 0;
-          .logo-name {
-            font-size: 1.5rem;
-            letter-spacing: 11pt;
-          }
-          .logo-title {
-            letter-spacing: 4.5pt;
-            margin-left: 0;
-          }
-        }
-        .logo-placeholder {
-          padding: 1.5em 1em 1.5em 1.5em;
-          .company-logo {
-            img {
-              height: 35px;
-              width: auto;
-            }
-          }
-        }
-      }
-    }
-  }
-
-  .menu-btn svg {
-    top: 0.7em;
-    right: 3.1em;
-    width: 35px;
-    height: auto;
-  }
-
-  // index page styles
-  .hero-container {
-    margin: 0;
-    padding: 0;
-
-    .hero-text-content {
-      background: linear-gradient(148deg, #0000000d -65%, #ffffff00 100%);
-      padding: 4rem;
-      padding-bottom: 2em;
-    }
-    .mouse-scroller {
-      display: flex;
-      justify-content: center;
-      .mouse {
-        width: 10px;
-        padding: 5px 6px;
-        height: 35px;
-        border: 1px solid black;
-        border-radius: 25px;
-        opacity: 0.75;
-        box-sizing: content-box;
-        margin-bottom: 20px;
-        .mouse-animation {
-          width: 10px;
-          height: 10px;
-          border-radius: 50%;
-          background-color: black;
-          animation: scroll 3s linear infinite;
-        }
-      }
-    }
-  }
-
-  @keyframes scroll {
-    from {
-      opacity: 1;
-      position: relative;
-      top: 0;
-    }
-    to {
-      opacity: 0.5;
-      position: relative;
-      top: 25px;
-    }
-  }
-
-  .mobile-social-icon {
-    display: none;
-  }
-
   .research-qoute {
     margin: 0 3em;
     padding-bottom: 2.5em;
   }
 
-  .featured {
-    .left {
-      .inner {
-        p .primary-button {
-          color: $primary-core;
-          font-weight: 500;
-          text-decoration: underline;
-          transition: $button-hover-state;
-          &:hover {
-            text-decoration: none;
-          }
-        }
-      }
-    }
-    padding: 3em 4em;
-    .right button {
-      cursor: pointer;
-      width: 20vw;
-    }
+  .make-a-donation-section .container {
+    padding: 0.9em;
   }
 
-  .skills {
-    padding: 2em 3em;
-    .skills-container ul {
-      display: flex;
-      flex-direction: row;
-      li {
-        justify-content: space-evenly;
-        margin-left: 1em;
-        .icon-container {
-          display: flex;
-          flex-direction: row;
-          align-items: center;
-          justify-content: center;
-          .two {
-            margin: 3em auto;
-            width: auto;
-          }
-          .three {
-            margin: 2.2em auto;
-            width: auto;
-          }
-          img {
-            padding: 0;
-            width: 140%;
-            height: auto;
-          }
-        }
-        .skill-title {
-          font-size: 2rem;
-        }
-      }
-    }
+  .editorial-card .card-grid_start .inner img {
+    max-width: 465px;
+    max-height: 465px;
   }
-
-  .portfolio {
-    padding: 0;
-    .portfolio-container {
-      display: flex;
-      flex-direction: row;
-      margin: 0 3em;
-      .right {
-        justify-content: center;
-        img {
-          width: 36vw;
-          height: 30vh;
-          margin-top: 2em;
-        }
-        .case-study-button {
-          width: 20vw;
-        }
-      }
-    }
-  }
-
-  .about {
-    padding: 4em;
-    padding-right: 3em;
-    .about-container {
-      ul {
-        display: grid;
-        grid-template-columns: repeat(3, auto);
-        grid-gap: 2em;
-        li {
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          justify-content: center;
-          margin: 0;
-          .icon-container {
-            padding: 0;
-            .degree-image {
-              width: 8.5vw;
-            }
-            img {
-              width: 5.9em;
-              height: auto;
-            }
-          }
-          .deliverables-img svg {
-            width: 290px;
-            height: auto;
-          }
-        }
-        .business-model {
-          .business-model-icon img {
-            width: 260px;
-          }
-        }
-        .column-stretch {
-          grid-column: 1/3;
-        }
-      }
-    }
-  }
-
-  // contact page styles
+  // contact section styles
   .contact-page-section {
     padding: 4em;
     .show-modal {
@@ -1183,19 +960,6 @@ footer {
   // thank you page styles
   .thank-you-section {
     padding: 0.5em;
-  }
-
-  section {
-    padding: 1em 4em;
-  }
-  // remind-me
-  .nav-container header .logo {
-    display: flex;
-    max-height: 50px;
-    .logo-placeholder .company-logo {
-      justify-content: center;
-      align-items: center;
-    }
   }
 
   footer .footer-container .footer-details {
