--- a/style.scss
+++ b/style.scss
@@ -21,30 +21,6 @@ $button-border-settings: 1px solid $primary-core;
 $button-hover-state: all 0.5s ease-in-out;
 $image-border-settings: 1px solid gainsboro;
 $box-shadow-standard: 11px 12px 9px -7px rgba(174, 174, 174, 0.39);
-//
-// Gradient system
-//
-$gradients: () !default;
-$gradients: map-merge(
-  (
-    chill: linear-gradient(135deg, #94aaab 0%, #0291e3 100%),
-    warm: linear-gradient(135deg, #fff774 0%, #fd803f 100%),
-    hot: linear-gradient(135deg, #f9445a 0%, #fd803f 100%),
-    cold: linear-gradient(135deg, #8019c6 0%, #2f93cc 100%),
-  ),
-  $gradients
-);
-
-// Gradient backgrounds
-@mixin bg-gradient($parent, $gradient) {
-  #{$parent} {
-    background: $gradient;
-  }
-}
-// gradient class
-@each $gradient, $value in $gradients {
-  @include bg-gradient(".bg-gradient-#{$gradient}", $value);
-}
 
 // format mixins
 // col
@@ -62,7 +38,7 @@ $gradients: map-merge(
   justify-content: center;
 }
 
-@mixin align-right {
+@mixin align-right__column {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
@@ -84,7 +60,7 @@ $gradients: map-merge(
   justify-content: center;
 }
 
-@mixin align-right {
+@mixin align-right__row {
   display: flex;
   flex-direction: row;
   align-items: flex-end;
@@ -255,11 +231,13 @@ header nav #click {
 }
 
 .nav-container {
-  background: transparent;
+  background: $core-neutral;
   height: 70px;
   width: 100%;
   @include align-center__column;
   border-bottom: 1px solid #8c39212b;
+  box-shadow: $box-shadow-standard;
+  position: fixed;
   header {
     width: 100%;
     height: inherit;
@@ -359,6 +337,9 @@ header #click:checked ~ ul li a {
   border: 1px solid $core-dark;
   border-radius: 2px;
   background: $core-neutral;
+  .container {
+    margin-top: 4em;
+  }
   .primary-button {
     @include align-center__column;
     height: 40px;
@@ -394,7 +375,6 @@ header #click:checked ~ ul li a {
   background-size: cover;
   width: 100vw;
   height: 30vh;
-  // filter: hue-rotate(338deg);
   .hero-donation {
     display: none;
   }
@@ -413,10 +393,10 @@ header #click:checked ~ ul li a {
       font-size: 22px;
     }
     .signature {
-      display: flex;
-      justify-content: flex-end;
+      @include align-right__row;
       font-style: normal;
-      font-size: 22px;
+      font-size: 17px;
+      margin-right: 2em;
     }
   }
 }
@@ -586,13 +566,13 @@ header #click:checked ~ ul li a {
       border: $button-border-settings;
       border-radius: 5px;
       .form-title {
-        margin-left: 0.5rem;
+        margin-left: 1em;
       }
       .contact-form-container {
         @include align-center__column;
         border-top: $button-border-settings;
         border-radius: 0;
-        background-color: #fff8bd30;
+        background-color: #f5f0c5c2;
         .left {
           @include align-center__column;
           padding-top: 0.5em;
@@ -628,19 +608,19 @@ header #click:checked ~ ul li a {
         }
         .right {
           @include align-center__column;
+          width: 100%;
+          background: #f1e7e4;
+          border-left: none;
+          border-bottom: none;
+          border-right: none;
+          border-top: $button-border-settings;
+          border-radius: 0;
           .contact-form__logo-container {
             @include align-center__column;
-            border-left: none;
-            border-bottom: none;
-            border-right: none;
-            border-top: $button-border-settings;
-            border-radius: 0;
-            width: 100%;
             .logo-container {
               @include align-center__column;
               border-radius: 5px;
               padding: 2em;
-              background: #f1e7e4;
               img {
                 border: none;
                 width: 350px;
@@ -866,6 +846,10 @@ footer {
     left: 5%;
   }
 
+  .contact-page-section .contact-container .contact-form .form-title {
+    margin-left: 1.3em;
+  }
+
   .thank-you-section .thank-you-container .thank-you-message {
     max-width: 365px;
     width: 100%;
@@ -881,6 +865,10 @@ footer {
   .show-modal {
     left: 4%;
     max-width: 84%;
+  }
+
+  .contact-page-section .contact-container .contact-form .form-title {
+    margin-left: 1.5em;
   }
 
   .events-lightbox .events-lightbox__content {
@@ -923,20 +911,41 @@ footer {
   }
 
   /*contact form styles*/
-
-  .contact-page-section .contact-container .contact-form .contact-form-container .input-area label .first-child,
-  .contact-page-section .contact-container .contact-form .contact-form-container .input-area label .second-child,
-  .contact-page-section .contact-container .contact-form .contact-form-container .input-area label .third-child,
-  .contact-page-section .contact-container .contact-form .contact-form-container .left .input-area label .text-field,
-  .contact-page-section .contact-container .contact-form .contact-form-container .left .input-area .submit-button {
-    width: 54vw;
+  .contact-page-section .contact-container .contact-form .form-title {
+    margin-left: 2.3em;
+  }
+  .contact-page-section .contact-container .contact-form .contact-form-container {
+    .input-area {
+      @include align-center__column;
+      label {
+        display: flex;
+        flex-direction: column;
+        .first-child,
+        .second-child,
+        .third-child {
+          width: 58vw;
+          height: 40px;
+        }
+      }
+    }
+    .left {
+      form {
+        padding: 2em 2em 1em 2em;
+        .input-area label .text-field {
+          width: 58vw;
+        }
+      }
+    }
+    .right {
+      border-radius: 0 0 5px 5px;
+    }
   }
 }
 
 // Styles for tablets and small laptops
 @media only screen and (min-width: 895px) {
   .hero-container {
-    height: 100vh;
+    height: 50vh;
   }
 
   .make-a-donation-section .primary-button {
@@ -961,7 +970,7 @@ footer {
       img {
         display: flex;
         align-self: center;
-        width: 60%;
+        width: 35%;
       }
     }
   }
@@ -994,27 +1003,6 @@ footer {
     top: 34%;
     left: 29.5%;
     width: 38vw;
-  }
-
-  .contact-page-section .contact-container .contact-form .contact-form-container .left .input-area label .first-child,
-  .contact-page-section .contact-container .contact-form .contact-form-container .left .input-area label .second-child,
-  .contact-page-section .contact-container .contact-form .contact-form-container .left .input-area label .third-child,
-  .contact-page-section .contact-container .contact-form .contact-form-container .left .input-area label .text-field {
-    padding: 9px 8px;
-    width: 36vw;
-    height: auto;
-  }
-
-  .contact-page-section .contact-container .contact-form .contact-form-container {
-    border-top: 1px solid $core-dark;
-    .left .w100 {
-      @include align-center__column;
-      .submit-button {
-        width: 20vw;
-        margin-top: 2em;
-        margin-bottom: 1em;
-      }
-    }
   }
 
   // Thank you styles
@@ -1152,74 +1140,57 @@ footer {
     .form-title {
       margin-left: 3em;
     }
-
     .contact-form-container {
       @include align-center__row;
-      .left {
+      background-color: $core-light;
+      .input-area {
         @include align-center__column;
-        background: #fff8bd30;
+
+        label {
+          display: flex;
+          flex-direction: column;
+          .first-child,
+          .second-child,
+          .third-child {
+            width: 35vw;
+            height: 40px;
+          }
+        }
+        .submit-button {
+          width: 200px;
+          height: 40px;
+        }
+      }
+      .left {
         width: 50%;
         form {
-          padding-top: 1em;
-        }
-        .input-area .submit-button {
-          background-color: #46db4633;
-          transition: all 1s ease-in-out;
-          &:hover {
-            background-color: whitesmoke;
+          // padding: 2em 2em 1em 2em;
+          .input-area label .text-field {
+            width: 35vw;
           }
         }
       }
-    }
-    .right {
-      @include align-center__column;
-      width: 50%;
-      .contact-form__logo-container {
-        @include align-center__column;
-        border-left: 1px solid $core-dark !important;
-        border-bottom: none !important;
-        border-right: none !important;
-        border-top: none !important;
+      .right {
+        width: 50%;
+        padding: 4em;
+        border: none;
+        border-left: 1px solid $core-dark;
         border-radius: 0;
-        width: 100%;
-        .logo-container {
-          @include align-center__column;
-          border-radius: 5px;
-          padding: 5em !important;
-          background: #f1e7e4;
-          img {
-            border: none;
-            width: 400px;
-            height: auto;
-          }
-          .logo-title {
-            font-size: 25px;
-            line-height: 0;
-            letter-spacing: 1.1pt;
-            text-transform: uppercase;
-            color: $core-dark;
-          }
-          .logo-subtitle {
-            font-size: 16px;
-            line-height: 50px;
-            color: $core-dark;
-          }
-        }
       }
     }
-  }
 
-  // thank you page styles
-  .thank-you-section {
-    padding: 0.5em;
-  }
+    // thank you page styles
+    .thank-you-section {
+      padding: 0.5em;
+    }
 
-  footer .footer-container .footer-details {
-    padding: 4em;
-  }
-  .footer-social-icon a:hover {
-    opacity: 0.5;
-    transition: $button-hover-state;
+    footer .footer-container .footer-details {
+      padding: 4em;
+    }
+    .footer-social-icon a:hover {
+      opacity: 0.5;
+      transition: $button-hover-state;
+    }
   }
 }
 
@@ -1254,24 +1225,31 @@ footer {
     justify-content: start;
     align-items: center;
     background-size: cover;
+    height: 100vh;
     .hero-donation {
       display: grid;
       margin-left: 4em;
       background: #fff;
       border-radius: 5px;
       box-shadow: $box-shadow-standard;
-      .container .primary-button {
-        box-shadow: $box-shadow-standard;
+      .container {
+        margin-top: 0;
+        .primary-button {
+          box-shadow: $box-shadow-standard;
+        }
       }
     }
   }
 
   .research-qoute {
+    padding: 4.5em;
     justify-content: center;
   }
 
-  .editorial-card {
-    padding: 0 6.5em;
+  .editorial-card,
+  .contact-page-section,
+  footer > .footer-container > .footer-details {
+    padding: 0 7.5em;
   }
 
   .editorial-card .card-grid_start .inner {
@@ -1286,7 +1264,7 @@ footer {
       flex: 0 0 250px;
       align-items: center;
       justify-content: space-between;
-      max-width: 91%;
+      max-width: 87%;
       .thumbnail-item {
         border: $button-border-settings;
         border-radius: 5px;
@@ -1298,17 +1276,32 @@ footer {
       }
     }
   }
-  // contact-page styles
 
+  .editorial-card .card-grid_start .inner .sm-image,
+  .editorial-card .card-grid_start .inner img {
+    width: 60%;
+  }
+  .editorial-card .card-grid_start .inner .charity-vest {
+    width: 40%;
+  }
+  // contact-page styles
+  .contact-page-section .contact-container .contact-form .contact-form-container .right {
+    padding: 8em;
+  }
+  .contact-page-section
+    .contact-container
+    .contact-form
+    .contact-form-container
+    .right
+    .contact-form__logo-container
+    .logo-container {
+    padding: 0;
+  }
   // Thank you page
 
   .thank-you-section .thank-you-container .thank-you-message {
     margin: 2em;
     padding: 1em;
-  }
-
-  footer .footer-container .footer-details {
-    padding: 1em 6.5em;
   }
 }
 
@@ -1332,7 +1325,9 @@ footer {
       margin-right: 10em;
     }
   }
-
+  .nav-container header nav {
+    margin: 0 2em;
+  }
   .hero-container {
     .hero-donation {
       margin-left: 10em;
@@ -1345,7 +1340,7 @@ footer {
   }
 
   .editorial-card .card-grid_start .inner .gallery {
-    max-width: 70%;
+    max-width: 80%;
   }
 
   .events-lightbox .events-lightbox__content {
@@ -1357,10 +1352,38 @@ footer {
   .contact-page-section .contact-container .contact-form .contact-form-container .left .input-area label .second-child,
   .contact-page-section .contact-container .contact-form .contact-form-container .left .input-area label .third-child,
   .contact-page-section .contact-container .contact-form .contact-form-container .left .input-area label .text-field {
-    width: 26vw;
-    height: auto;
+    max-width: 500px;
+    height: 40px;
+    margin: 0.5em;
+  }
+  .contact-page-section
+    .contact-container
+    .contact-form
+    .contact-form-container
+    .left
+    form
+    .input-area
+    label
+    .text-field {
+    max-width: 500px;
+    height: 200px;
   }
 
+  .contact-page-section {
+    margin: 2em 5.5em;
+  }
+
+  .contact-page-section
+    .contact-container
+    .contact-form
+    .contact-form-container
+    .right
+    .contact-form__logo-container
+    .logo-container {
+    padding: 0;
+    width: 300px;
+    padding: 2.5em 0px;
+  }
   footer .footer-container {
     .footer-details {
       padding: 2em 13em;
@@ -1518,5 +1541,64 @@ footer {
   }
   footer .footer-container .footer-details {
     padding: 5em 18em;
+  }
+}
+
+@media only screen and (min-width: 1919px) {
+  .nav-container header nav ul {
+    margin-right: 13em;
+  }
+  .editorial-card {
+    margin: 0 20.5em;
+  }
+  .editorial-card .card-grid_start .inner .sm-image,
+  .editorial-card .card-grid_start .inner img,
+  .editorial-card .card-grid_start img {
+    width: 50%;
+  }
+  .editorial-card .card-grid_start .inner .charity-vest {
+    width: 30%;
+  }
+  .editorial-card .card-grid_start .inner .gallery {
+    max-width: 72%;
+  }
+  .editorial-card .card-grid_start .inner .editorial-desc_alt {
+    margin-right: 0;
+  }
+  .contact-page-section .contact-container .contact-form .contact-form-container .left .input-area label .first-child,
+  .contact-page-section .contact-container .contact-form .contact-form-container .left .input-area label .second-child,
+  .contact-page-section .contact-container .contact-form .contact-form-container .left .input-area label .third-child,
+  .contact-page-section .contact-container .contact-form .contact-form-container .left .input-area label .text-field {
+    width: 30vw;
+    height: 50px;
+    margin: 8px 40px;
+  }
+  .contact-page-section .contact-container .contact-form .right .contact-form__logo-container {
+    border-left: none;
+  }
+  .contact-page-section
+    .contact-container
+    .contact-form
+    .contact-form-container
+    .right
+    .contact-form__logo-container
+    .logo-container {
+    width: 353px;
+    padding: 2.5em;
+    .logo-title {
+      font-size: 23px;
+      line-height: 0;
+      letter-spacing: 1.3pt;
+      text-transform: uppercase;
+    }
+    .logo-subtitle {
+      font-size: 18px;
+      line-height: 50px;
+      font-variant-caps: all-small-caps;
+    }
+  }
+
+  footer .footer-container .footer-details {
+    padding: 5em 21em;
   }
 }
